tests/pass/void_enum.tk
import core/result::{Result}
import std/error::{Error}
fn main() -> i32 {
    auto res: Result<(), Error> = Result<(), Error>::Ok(())
    return 0
}
