tests/fail/str_index.tk
fn main() -> i32 {
    auto s: str = "Toka"
    auto c = s[2] // error[E0490]: Subscript indexing is disabled for UTF-8 'str'
    return 0
}
